<resources>
    <string name="app_name">Task- Calculator</string>
    <string name="calculator" />
    <string name="enter" />
    <string name="calculator1">CALCULATOR</string>
    <string name="enter1">Enter</string>
    <string name="_36_42">36+42</string>
    <string name="_6755">=6755</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="a">A</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="multiply">*</string>
    <string name="remainder">%</string>
    <string name="divide">/</string>
    <string name="c">C</string>
    <string name="ac">AC</string>
    <string name="_50">50</string>
    <string name="_20_30">20+30</string>
    <string name="_50equals">=50</string>
    <string name="string_multiply">`@string/multiply`</string>
    <string name="mul">×</string>
    <string name="_00">00</string>
</resources>