<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9F9"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="20dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="32sp"
        android:background="#FFF9F9"
        app:layout_constraintBottom_toTopOf="@id/output" />

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="20dp"
        android:text=""
        android:textColor="#504C4C"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@id/line" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="6dp"
        android:background="@color/lineColor"
        app:layout_constraintBottom_toTopOf="@id/LinearLayout" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                style="@style/operatorButton"
                android:text="@string/c" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                style="@style/digitButton"
                app:icon="@drawable/baseline_backspace_24"
                app:iconTint="@color/btnBackground2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_modulo"
                style="@style/operatorButton"
                android:text="@string/remainder" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_divide"
                style="@style/operatorButton"
                android:text="@string/divide" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/digitButton"
                android:text="@string/_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/digitButton"
                android:text="@string/_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                style="@style/digitButton"
                android:text="@string/_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiply"
                style="@style/operatorButton"
                android:text="@string/mul" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/digitButton"
                android:text="@string/_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/digitButton"
                android:text="@string/_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                style="@style/digitButton"
                android:text="@string/_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                style="@style/operatorButton"
                android:text="@string/add" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/digitButton"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/digitButton"
                android:text="@string/_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                style="@style/digitButton"
                android:text="@string/_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_subtract"
                style="@style/operatorButton"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_00"
                style="@style/digitButton"
                android:layout_width="72dp"
                android:text="@string/_00"
                android:textSize="22sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_0"
                style="@style/digitButton"
                android:text="@string/_0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/digitButton"
                android:text="@string/dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equals"
                style="@style/operatorButton"
                android:text="@string/equals" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>